# AGH

./: .gitignore  README.md
IO/: prog1.pqc
IO/lab3/: BOK.vpp  untitled.vpp.bak_000f  untitled.vpp.bak_001d  untitled.vpp.bak_002d
JOS/: przerzut_D.v  przerzut_D.vhd  rejestr.v  rejestr.vhd  test.v  test2.v
JOS/lab1/: d.v  testD.v
MIO/lab1/: MIO_organizacja.ipynb
MIO/lab2/: MIO__lab1.ipynb  lab2.ipynb  test.py  test.sql
MIO/lab3/: MIO_Konopka_Bartosz_Lab2.ipynb  MIO__lab2.ipynb  MIO__lab2_spr.ipynb  medicine.txt
MIO/lab4/: MIO__lab3.ipynb
MIO/lab5/: mio__lab4.ipynb
MIO/lab6/: mio__lab5.ipynb
MIO/lab7/: circle.csv  mio__lab6.ipynb  planets.csv
MIO/lab8/: lab8.py  mio__lab8.ipynb
android/app/: build.gradle
bazy danych/: 26.10  autbusy.architect  autobusy_tworzenie_tabeli.sql  autobusy_wypelnienie.sql  drzewo_gen.architect  drzewo_gen.architect~  drzewo_gen.sql  kurs.sql  lab5.sql  lab6.sql  lab7.sql  lab8zad7.sql  temp.sql  tworzenie_tabeli.sql  wypelnienie.sql  zad5.sql  zad6.sql  zad6_lab7.sql  zadanie3.sql  zadanie3_byme.sql  zadanie_lab5.sql
cpp/: a.out  mt19937.cpp
cpp/sem2/: test.c
cpp/sem4/: a.out  lab8.rar  test.cpp
embeded/lab2/: main.c
embeded/lab2_test/: lab2_test.uvoptx  lab2_test.uvprojx  main.c
embeded/lab4/: lab3proj.uvprojx  main.c
grafika/lab/: lab7.rar  s.txt
grafika/lab/lab2/: CMakeLists.txt  bartek.cpp  main.cpp  olek.cpp
grafika/lab/lab2/include/: ShareTechMono-Regular.h  hexagons.h  hsl_rgb.h  slider.h  things.h
grafika/w/: 01-Okno.cpp  02-Klawiatura.cpp  03-Myszka.cpp  04-Rysowanie.cpp  05-Fonty_i_transformacje.cpp  06-Tekstury_i_sprajty.cpp  08-Sound.cpp  Makefile
grafy/lab1/: grafyZKomentarzem.ipynb  graph.py  kReg.py
grafy/lab2/: grafyZKomentarzem.ipynb  k-regular.ipynb
java/lab1/: HelloWorld.java  circle.eps  gnu.sh  zad1.java
java/lab13/: angpol.dic
java/lab2/: lab2.java
java/lab5/: shop.csv
laby/sem1/: main.c
laby/sem3/lab13_d/: CMakeLists.txt
laby/sem3/lab13_d/include/: PVec.h
laby/sem3/lab2_t/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  compile_commands.json  main.cpp
laby/sem3/lab8_d/: CMakeLists.txt
laby/sem3/lab8_d/include/: Wymierne.h
laby/sem3/lab8_d/src/: Wymierne.cpp
metody_numeryczne/: helper.h  main-2.c
metody_numeryczne/lab1/: helper.h  lab1.cpp  output.txt
metody_numeryczne/lab10/: a.out  lab10.cpp  log.txt  out.txt
metody_numeryczne/lab2/: a.out  a.txt  b.txt  helper.h  main.cpp  main2.cpp  out.txt  out2.txt
metody_numeryczne/lab2_d/: helper.h  lab2_d.cpp  out.txt
metody_numeryczne/lab3/: .nfs00000000064c7ce50000391c  a.out  lab3.cpp  out.txt
metody_numeryczne/lab3_d/: a.out  a.txt  b.txt  gsl_wrapper.hpp  helper copy.h  helper.h  lab3_d.cpp  labtest.cpp  out.txt
metody_numeryczne/lab4/: A.txt  a.out  main.cpp  x.txt
metody_numeryczne/lab5/: graph.txt  out.txt
metody_numeryczne/lab6/: a.out  fun0_n20.txt  main.cpp  out.txt  out1.txt
metody_numeryczne/lab7/: a.out  b.cpp  helper.h  main.cpp  out.txt
metody_numeryczne/lab8/: a.out  lab8.cpp  m.cpp  out.txt  trajektoria.txt
metody_numeryczne/lab9/: a.out  helper.h  lab9.cpp  out.txt
python/jezyk_python/: main.py  plik  test.py  test2.py
python/pite/: git.txt
(+1224 files in other folders)
